docs(GAS笔记): 更新GAS相关文档内容和结构
-增加Gameplay Tag、Prediction、Gameplay Effect和Ability的文档说明。
- 更新人物属性及其效果的描述。
- 调整文档结构以提高GasNote的连贯性和清晰度。
- 修正错别字和语法错误，确保文档质量。

BREAKING CHANGE: 删除了过时的GAS相关文档，可能会导致书签或引用的链接失效。

--- a/UE5游戏框架/GamePlay/游戏框架.md
+++ b/UE5游戏框架/GamePlay/游戏框架.md
@@ -9,7 +9,7 @@
 | All PlayerController | Own PlayerController |
 |     AIController     |                      |
 
-![GameplayServerandClient](https://raw.githubusercontent.com/theMeiLin/UE5Notes/main/UE5游戏框架/Images/Gameplay.png)
+![Gameplay Server and Client](https://github.com/theMeiLin/UE5Notes/blob/main/UE5游戏框架/Images/Gameplay.png)
 
 # GameMode
 
