--- a/游戏术语翻译指南/人物属性篇/人物属性.md
+++ b/游戏术语翻译指南/人物属性篇/人物属性.md
@@ -2,18 +2,22 @@
 
 ## 基础属性（Base Attributes）
 
-|  中文   |    英文     | 描述                                                              |
-|:-----:|:---------:|:----------------------------------------------------------------|
-|  生命值  |  Health   | 代表角色当前可以承受多少伤害而不被摧毁或死亡。                                         |
-| 最大生命值 | MaxHealth | 用于描述游戏角色所能承受的最大伤害量，角色所能拥有的生命值上限。                                |
-|  魔法值  |   Mana    | 魔法值是角色在游戏中使用魔法或特殊技能所需的能量单位。                                     |
-| 最大魔法值 |  MaxMana  | 角色在游戏中能够拥有的最高魔法值数量。它是魔法值（MP 或 Mana）的一个上限，决定了角色能够存储并使用的魔法能量的最大量。 |
+| 属性 | 描述 | 英文 |  
+|:---------------:|:--------------------------------:|:---|--|
+| 生命值：Health | 代表角色当前可以承受多少伤害而不被摧毁或死亡。 |Represents how much damage a character can currently
+take without being destroyed or dying. |
+| 最大生命值：MaxHealth | 用于描述游戏角色所能承受的最大伤害量，角色所能拥有的生命值上限。 | It is used to describe the
+maximum amount of damage that a character can take, and the maximum amount of health a character can have.|
+| 魔法值：Mana | 魔法值是角色在游戏中使用魔法或特殊技能所需的能量单位。 |Mana is the unit of energy a character needs to
+use magic or special skills in the game. |
+| 最大魔法值： MaxMana | 角色在游戏中能够拥有的最高魔法值数量。 |The maximum amount of mana a character can have in the
+game. |
 
 ## 主要属性（Primary Attributes）
 
 |       属性        |      效果       | 英文                                                       |
 |:---------------:|:-------------:|:---------------------------------------------------------|
-|   力量：Strength   | 增加物理攻击，增加物理抗性 | Increases physical damage, increases physical resistance |
+|   力量：Strength   | 增加物理伤害，增加物理抗性 | Increases physical damage, increases physical resistance |
 | 智力：Intelligence | 增加魔法伤害，增加魔法抗性 | Increases magical damage, increases magical resistance   |
 |   敏捷：Agility    |   增加护甲和护甲穿透   | Increases Armor and Armor Penetration                    | 
 |  精力（活力）：Vigor   |  增加最大生命值和耐力   | Increases Max Health and Stamina                         |
@@ -43,3 +47,42 @@
 |  毒素抗性：PoisonResistance   |        无        | 减少受到的毒素伤害    | Reduces poison damage taken            |
 |   神圣抗性：HolyResistance    |        无        | 减少所有伤害类型的伤害  | Reduces all damage taken               |
 
+# 状态
+
+## 正面状态
+
+四神Buff：炽热之火：Blazing Heat，
+
+|         属性         |              效果              | 英文                                                                                            |
+|:------------------:|:----------------------------:|:----------------------------------------------------------------------------------------------|
+|     狂热：Frenzy      |  攻击速度，移动速度增加，但增加额外受到的物理伤害。   | Attack speed, movement speed is increased, but additional physical damage taken is increased. |
+|     免疫：Immune      | 免疫所有负面状态，但在持续时间中无法再获得任何正面状态。 | Immune to all debuffs, but no more positives for the duration.                                |
+| 战斗祈祷：Battle Prayer |           百分比增加护甲            |                                                                                               |
+|      热忱：Zeal       |          百分比增加物理伤害           |                                                                                               |
+| 炽热之火：Blazing Heat  |            增加冰冻抗性            |                                                                                               |
+|                    |                              |                                                                                               |
+|
+
+## 负面状态
+
+| 中文 | 英文 | 描述 |
+|:--:|:--:|:--:|
+
+1. 眩晕：Stun
+    + 角色处于眩晕状态时，无法进行任何行动，包括移动、攻击、使用技能等。
+2. 减速：Slow
+    + 角色处于减速状态时，移动速度减慢。
+3. 沉默：Silence
+    + 角色处于沉默状态时，无法使用技能。
+4. 中毒：Poison
+    + 角色处于中毒状态时，收到持续毒素伤害，伤害可叠加，受到的伤害会根据毒素层数增加。
+5. 定身：Freeze
+    + 角色处于定身状态时，无法移动，但可以使用技能或者攻击。
+6. 虚弱：Weak
+    + 角色处于虚弱状态时，移动速度降低，攻击力降低，防御力降低，攻击速度降低。
+7. 流血：Bleed
+    + 角色处于流血状态时，受到的伤害会根据流血层数增加，当达到最大层数时，会死亡。
+8. 恐惧：Fear
+    + 角色失去控制，会随机移动。
+9. 致盲：Blind
+    + 角色处于致盲状态时，视野范围减少，降低命中率。
