```扩展了游戏术语翻译指南中的人物属性篇，增加了抗性相关词汇的建议翻译，包括火焰、冰冻、闪电、毒素和物理抗性，以及与之相关的神话命名。 ```

--- a/游戏术语翻译指南/人物属性篇/人物属性.md
+++ b/游戏术语翻译指南/人物属性篇/人物属性.md
@@ -61,7 +61,61 @@ game. |
 |      热忱：Zeal       |          百分比增加物理伤害           |                                                                                               |
 | 炽热之火：Blazing Heat  |            增加冰冻抗性            |                                                                                               |
 |                    |                              |                                                                                               |
-|
+
+火焰抗性
+烈焰庇护
+炎之屏障
+炽热守护
+火舌护盾
+
+冰冻抗性
+寒冰无畏
+冰霜庇佑
+霜雪之御
+极寒防护
+
+闪电抗性
+雷霆不侵
+电光护身
+静电屏蔽
+雷暴庇护
+
+毒素抗性
+毒瘴免疫
+腐化抵抗
+剧毒净化
+毒液过滤
+
+物理抗性
+坚不可摧
+铁壁防御
+磐石之躯
+固若金汤
+
+火焰抗性
+赫菲斯托斯之炉 —— 赫菲斯托斯是希腊神话中的火神与锻造之神。
+凤凰再生 —— 凤凰是一种在火焰中重生的神话生物。
+熔岩之火 —— 熔岩之火是希腊神话中的火神。
+
+冰冻抗性
+北风之息 —— 北风是希腊神话中寒冷和冬天的象征。
+冰雪女神的祝福 —— 可以联想到北欧神话中的冬神或冰雪女神。
+冰霜之盾 —— 冰霜之盾是希腊神话中的冰神。
+
+闪电抗性
+宙斯之盾 —— 宙斯是希腊神话中的天空和雷电之神。
+雷霆之卫 —— 参考宙斯的雷电之力。
+雷电之盾 —— 雷电之盾是希腊神话中的雷神。
+
+毒素抗性
+赫拉克勒斯的解毒剂 —— 赫拉克勒斯在完成十二项任务中经常遇到有毒的怪物。
+阿斯克勒庇俄斯之杖 —— 阿斯克勒庇俄斯是希腊神话中的医神。
+毒气之盾 —— 毒气之盾是希腊神话中的毒神。
+
+物理抗性
+阿喀琉斯之甲 —— 阿喀琉斯是希腊神话中的英雄，以其几乎无敌的身体著称。
+奥林匹斯之墙 —— 奥林匹斯山是希腊神话中诸神居住的地方，象征着坚固和不可侵犯。
+智慧之盾 —— 智慧之盾是希腊神话中的智慧之神。
 
 ## 负面状态
 
