将游戏术语翻译指南/人物属性篇/人物属性.md重命名为游戏术语翻译指南/人物篇/人物属性.md，以更好地反映其内容和分类。
docs(游戏术语翻译指南): 扩展并整理角色属性和技能相关文档

- 更新人物属性及其效果表格，简化并清晰化描述。
- 新增职业特定技能和通用属性，增强游戏术语的详尽程度和可用性。
- 清理过时的信息，重新组织内容结构，提升文档可读性和导航性。

fix(GamePlayEffect): 修正Gameplay Effect组件中的标签和实例策略表格

更新Gameplay Effect组件文档，修正标签和实例策略表格的格式和内容，提高准确性和清晰度。

fix(GamePlayAbility): 修正Ability Actor Info表格

修正Ability Actor Info表格中的错误信息，确保正确反映AbilitySystemComponent的创建和拥有关系。

--- a/UE5游戏框架/GamePlay/游戏框架.md
+++ b/UE5游戏框架/GamePlay/游戏框架.md
@@ -9,6 +9,9 @@
 | All PlayerController | Own PlayerController |
 |     AIController     |                      |
 
+PlayerController：自己为主机的时候，也就是Server，自己的PlayerController是有效的，其他玩家的PlayerController可能为空，不用
+用check来检查PlayerController是否为null，只用if 判断。
+
 ![Gameplay Server and Client](https://github.com/theMeiLin/UE5Notes/blob/main/UE5游戏框架/Images/Gameplay.png)
 
 # GameMode
